# zenus

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  SUMMARY.md  audit.md  audit.txt  bochsrc  limine.conf  mkinitrd.sh  qemu_final.txt  qemu_fixed.txt  qemu_fixed2.txt  qemu_gpf_cr3.txt  qemu_lockonly.txt  qemu_minimal.txt  qemu_nocall.txt  qemu_output.txt  qemu_output_raw.txt  rust-toolchain.toml  test.html
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  lint.yml  test.yml
.opencode/agents/: production-agent.md
.opencode/skills/: architecture.md  docs.md  kernel.md  production.md  security.md  testing.md
apps/: Cargo.toml
apps/src/: lib.rs  linker.ld  shell.rs  test_runner.rs  user.rs  user.s  user_demo.rs  user_demo.s
crates/zenus-arch/: Cargo.toml
crates/zenus-arch/src/: acpi.rs  ata.rs  cpu.rs  crash.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  limine.rs  pci.rs  random.rs  rtc.rs  smp.rs  user.rs  watchdog.rs
crates/zenus-arch/src/interrupts/: apic.rs  handler.rs  idt.rs  ioapic.rs  pit.rs
crates/zenus-console/: Cargo.toml
crates/zenus-console/src/: error.rs  lib.rs  log.rs  serial.rs  syslog.rs  vga.rs
crates/zenus-fs/: Cargo.toml
crates/zenus-fs/src/: block_cache.rs  cred.rs  devfs.rs  ext2.rs  ext2_fsck.rs  initrd.rs  io_scheduler.rs  journal.rs  lib.rs  pkg.rs  sysctl.rs  tarfs.rs  tmpfs.rs  vfs.rs
crates/zenus-mem/: Cargo.toml
crates/zenus-mem/src/: allocator.rs  frame_allocator.rs  lib.rs  paging.rs
crates/zenus-net/: Cargo.toml
crates/zenus-net/src/: arp.rs  checksum.rs  dhcp.rs  dhcp_server.rs  dns.rs  ethernet.rs  firewall.rs  icmp.rs  ipv4.rs  lib.rs  nic.rs  route.rs  rtl8139.rs  socket.rs  ssh.rs  tcp.rs  udp.rs
crates/zenus-ns/: Cargo.toml
crates/zenus-ns/src/: ipc.rs  lib.rs  mnt.rs  net.rs  pid.rs  user.rs  uts.rs
crates/zenus-sched/: Cargo.toml
crates/zenus-sched/src/: init.rs  lib.rs  scheduler.rs  task.rs
crates/zenus-sync/: Cargo.toml
crates/zenus-sync/src/: irq_guard.rs  lib.rs  lockdep.rs  spinlock.rs
crates/zenus-syscall/: Cargo.toml
crates/zenus-syscall/src/: elf.rs  lib.rs  syscall.rs
crates/zenus-syscall/src/syscall/: fd.rs
crates/zenus-virtio/: Cargo.toml
crates/zenus-virtio/src/: balloon.rs  blk.rs  console.rs  lib.rs  net.rs  pci.rs  queue.rs
zutils/: Cargo.toml
zutils/crates/cat/: Cargo.toml
zutils/crates/cat/src/: lib.rs
zutils/crates/chmod/: Cargo.toml
zutils/crates/chmod/src/: lib.rs
zutils/crates/chown/: Cargo.toml
zutils/crates/chown/src/: lib.rs
zutils/crates/clear/: Cargo.toml
zutils/crates/clear/src/: lib.rs
zutils/crates/common/: Cargo.toml
zutils/crates/common/src/: lib.rs
zutils/crates/cp/: Cargo.toml
zutils/crates/cp/src/: lib.rs
zutils/crates/df/: Cargo.toml
zutils/crates/df/src/: lib.rs
zutils/crates/dmesg/: Cargo.toml
zutils/crates/dmesg/src/: lib.rs
zutils/crates/du/: Cargo.toml
zutils/crates/du/src/: lib.rs
zutils/crates/echo/: Cargo.toml
zutils/crates/echo/src/: lib.rs
zutils/crates/find/: Cargo.toml
zutils/crates/find/src/: lib.rs
zutils/crates/grep/: Cargo.toml
zutils/crates/grep/src/: lib.rs
zutils/crates/help/: Cargo.toml
zutils/crates/help/src/: lib.rs
zutils/crates/id/: Cargo.toml
zutils/crates/id/src/: lib.rs
zutils/crates/ifconfig/: Cargo.toml
zutils/crates/ifconfig/src/: lib.rs
zutils/crates/kill/: Cargo.toml
zutils/crates/kill/src/: lib.rs
zutils/crates/ls/: Cargo.toml
zutils/crates/ls/src/: lib.rs
zutils/crates/meminfo/: Cargo.toml
zutils/crates/meminfo/src/: lib.rs
zutils/crates/mkdir/: Cargo.toml
zutils/crates/mkdir/src/: lib.rs
zutils/crates/mount/: Cargo.toml
zutils/crates/mount/src/: lib.rs
zutils/crates/mv/: Cargo.toml
zutils/crates/mv/src/: lib.rs
zutils/crates/native/zbench/: Cargo.toml
zutils/crates/native/zbench/src/: lib.rs
zutils/crates/native/zdiag/: Cargo.toml
zutils/crates/native/zdiag/src/: lib.rs
zutils/crates/native/zdoctor/: Cargo.toml
zutils/crates/native/zdoctor/src/: lib.rs
zutils/crates/native/zinfo/: Cargo.toml
zutils/crates/native/zinfo/src/: lib.rs
zutils/crates/native/zmem/: Cargo.toml
zutils/crates/native/zmem/src/: lib.rs
zutils/crates/native/zpkg/: Cargo.toml
zutils/crates/native/zpkg/src/: lib.rs
zutils/crates/native/zsys/: Cargo.toml
zutils/crates/native/zsys/src/: lib.rs
zutils/crates/native/ztrace/: Cargo.toml
zutils/crates/native/ztrace/src/: lib.rs
zutils/crates/pgrep/: Cargo.toml
zutils/crates/pgrep/src/: lib.rs
zutils/crates/ps/: Cargo.toml
zutils/crates/ps/src/: lib.rs
zutils/crates/pwd/: Cargo.toml
zutils/crates/pwd/src/: lib.rs
zutils/crates/reboot/: Cargo.toml
zutils/crates/reboot/src/: lib.rs
zutils/crates/rm/: Cargo.toml
zutils/crates/rm/src/: lib.rs
zutils/crates/shutdown/: Cargo.toml
zutils/crates/shutdown/src/: lib.rs
zutils/crates/timer/: Cargo.toml
zutils/crates/timer/src/: lib.rs
zutils/crates/top/: Cargo.toml
zutils/crates/top/src/: lib.rs
zutils/crates/touch/: Cargo.toml
zutils/crates/touch/src/: lib.rs
zutils/crates/uname/: Cargo.toml
zutils/crates/uname/src/: lib.rs
zutils/crates/uptime/: Cargo.toml
zutils/crates/uptime/src/: lib.rs
zutils/crates/which/: Cargo.toml
zutils/crates/which/src/: lib.rs
zutils/crates/whoami/: Cargo.toml
zutils/crates/whoami/src/: lib.rs
