[package]
name = "zenus-syscall"
version = "0.1.0"
edition.workspace = true

[dependencies]
x86_64 = { workspace = true }
zenus-arch = { path = "../zenus-arch" }
zenus-console = { path = "../zenus-console" }
zenus-fs = { path = "../zenus-fs" }
zenus-mem = { path = "../zenus-mem" }
zenus-sched = { path = "../zenus-sched" }
zenus-sync = { path = "../zenus-sync" }
zenus-ns = { path = "../zenus-ns" }
