[package]
name = "zutils_zsys"
version.workspace = true
edition.workspace = true

[dependencies]
zutils_common = { path = "../../common" }
zenus-arch = { path = "../../../../crates/zenus-arch" }
zenus-sched = { path = "../../../../crates/zenus-sched" }
zenus-fs = { path = "../../../../crates/zenus-fs" }
